Fix social links positioning when nav menu wraps onto new line

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -741,6 +741,11 @@ footer {
 }
 
 @media (max-width: 1280px) {
+    #social-links {
+        align-self: center;
+        margin-top: -10px;
+    }
+
     .title {
         font-size: 2.8rem;
         line-height: 1.15;
